add compiler warnings and display pieces

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,6 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 project(chess LANGUAGES CXX C)
 
-add_definitions(-g)
-
 include(FetchContent)
 FetchContent_Declare(
   backward
@@ -19,6 +17,9 @@ enable_testing()
 find_package(spdlog REQUIRED)
 find_package(SFML REQUIRED)
 find_package(nlohmann_json REQUIRED)
+
+add_definitions(-g)
+add_compile_options(-Werror -Wall -Wextra -Wpedantic -Wshadow -Wconversion -Wsign-conversion -Wold-style-cast)
 
 add_executable(chess src/main.cpp src/board.cpp src/game_state_handler.cpp)
 add_backward(chess)
